# sachista-chess

./: .gitignore  CMakeLists.txt  README.md  build-clang.sh  build-debug.sh  build-gcc.sh  build-icc.sh  build.sh  sachista-chess.pro  updateversion.sh
docs/: perft-results.txt
engine-uci/: CMakeLists.txt  command-debug.cpp  command-help.cpp  command-isready.c  command-isready.cpp  command-perft.c  command-perft.cpp  command-quit.cpp  command-uci.c  command-uci.cpp  command-ucinewgame.c  command-ucinewgame.cpp  commands.c  commands.h  main.c  main.cpp  uci.h  utils.c  utils.cpp
git-hooks/: post-commit
movegenerator/: CMakeLists.txt  bitboard.c  bitboard.cpp  bitboard.h  bitscan.h  chessboard-fen.cpp  chessboard-perft.cpp  chessboard-stats.cpp  chessboard-stats.h  chessboard-string.cpp  chessboard.c  chessboard.cpp  chessboard.h  chesspiece.h  main-perft.cpp  makemove.c  memfree.c  move-bishop.cpp  move-king.cpp  move-knight.cpp  move-makemove.cpp  move-pawn.cpp  move-rook.cpp  move-unmakemove.cpp  move.c  move.cpp  move.h  movearray.h  movegenerator-bishop.c  movegenerator-king.c  movegenerator-knight.c  movegenerator-pawn.c  movegenerator-queen.c  movegenerator-rook.c  movegenerator.c  movegenerator.h  movegenerator.pro  perft.c  perft.cpp  perft.h  (+10 more)
movegenerator-perft/: CMakeLists.txt  main.c  main.cpp  movegenerator-perft.pro  perft.c
movegenerator-test/: CMakeLists.txt  bitboard-test.cpp  chessboard-stats-test.cpp  chessboard-test.cpp  chesspiece-test.cpp  main.cpp  move-unmake-test.cpp  movegenerator-test.pro  movesgenerator-bishop-test.cpp  movesgenerator-king-test.cpp  movesgenerator-knight-test.cpp  movesgenerator-pawn-test.cpp  movesgenerator-queen-test.cpp  movesgenerator-rook-test.cpp  movesgenerator-test.cpp  movesgenerator-test.h  random64-test.cpp  utility-test.cpp  zobrist-test.cpp
src/: CMakeLists.txt
src/movegenerator/: CMakeLists.txt  bitboard.cpp  bitboard.h  chessboard-fen.cpp  chessboard-perft.cpp  chessboard-string.cpp  chessboard.cpp  chessboard.h  move-bishop.cpp  move-king.cpp  move-knight.cpp  move-makemove.cpp  move-pawn.cpp  move-rook.cpp  move.cpp  move.h  movearray.h  rand64.cpp  rand64.h  utility.cpp  zobrist.cpp  zobrist.h
src/movegenerator-perft/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  bitboard-test.cpp  chessboard-test.cpp  main.cpp  movesgenerator-bishop-test.cpp  movesgenerator-knight-test.cpp  movesgenerator-pawn-test.cpp  movesgenerator-rook-test.cpp  movesgenerator-test.cpp  movesgenerator-test.h  random64-test.cpp  utility-test.cpp  zobrist-test.cpp
